--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         é tocar violão — sou apaixonado por música e adoro explorar novas harmonias.
         <hr>
     </p>
-    <button onclick="MostrarMensagem()">clique para ver mensagem!</button>
+    <button onclick="MostrarMensagem()">Clique para ver mensagem!</button>
     <p id="mensagem"></p>
     <ul>
         <li> Tocar Violão</li>
